dropshot/tests/fail/bad_endpoint3.stderr
error[E0277]: the trait bound `String: ExclusiveExtractor` is not satisfied
  --> tests/fail/bad_endpoint3.rs:18:13
   |
18 |     _param: String,
   |             ^^^^^^ the trait `SharedExtractor` is not implemented for `String`, which is required by `String: ExclusiveExtractor`
   |
   = help: the following other types implement trait `SharedExtractor`:
             dropshot::Path<PathType>
             dropshot::Query<QueryType>
   = note: required for `String` to implement `ExclusiveExtractor`
note: required by a bound in `need_exclusive_extractor`
  --> tests/fail/bad_endpoint3.rs:12:1
   |
12 | / #[endpoint {
13 | |     method = GET,
14 | |     path = "/test",
15 | | }]
   | |__^ required by this bound in `need_exclusive_extractor`
...
18 |       _param: String,
   |               ------ required by a bound in this function
   = note: this error originates in the attribute macro `endpoint` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `fn(RequestContext<()>, String) -> impl Future<Output = Result<HttpResponseOk<()>, HttpError>> {<impl std::convert::From<bad_endpoint> for ApiEndpoint<<RequestContext<()> as RequestContextArgument>::Context>>::from::bad_endpoint}: dropshot::handler::HttpHandlerFunc<_, _, _>` is not satisfied
  --> tests/fail/bad_endpoint3.rs:16:10
   |
12 | / #[endpoint {
13 | |     method = GET,
14 | |     path = "/test",
15 | | }]
   | |__- required by a bound introduced by this call
16 |   async fn bad_endpoint(
   |            ^^^^^^^^^^^^ the trait `dropshot::handler::HttpHandlerFunc<_, _, _>` is not implemented for fn item `fn(RequestContext<()>, String) -> impl Future<Output = Result<HttpResponseOk<()>, HttpError>> {<impl std::convert::From<bad_endpoint> for ApiEndpoint<<RequestContext<()> as RequestContextArgument>::Context>>::from::bad_endpoint}`
   |
note: required by a bound in `ApiEndpoint::<Context>::new`
  --> src/api_description.rs
   |
   |     pub fn new<HandlerType, FuncParams, ResponseType>(
   |            --- required by a bound in this associated function
...
   |         HandlerType: HttpHandlerFunc<Context, FuncParams, ResponseType>,
   |                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `ApiEndpoint::<Context>::new`
